[package]
name = "picklist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# druid = { version = "0.8.0", features = ["im"]}
druid = { git = "https://github.com/linebender/druid.git", features = ["im"] }
fuzzy-matcher = "0.3.7"
similar = { version = "2.2.1", default-features = false }
simple_logger = "4.0.0"
tracing = "0.1.37"
anyhow = "1.0.66"

[lib]

[[bin]]
name = "quickpick"

[profile.release]
debug = true
